issue #1 migracion: remove [XML] Remove string attrribute from views.

--- a/view/calcular_papel_elegir_interior_form.xml
+++ b/view/calcular_papel_elegir_interior_form.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of the sale_printery_budget module for Tryton.
 The COPYRIGHT file at the top level of this repository contains
 the full copyright notices and license terms. -->
-<form string="Retomar Asistente">
+<form>
     <label name="orden_trabajo" />
     <field name="orden_trabajo" />
     <field name="sale_id" invisible="1"/>
