--- a/view/otra_cantidad_tree.xml
+++ b/view/otra_cantidad_tree.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree string="Otra Cantidad">
+<tree>
     <field name="cantidad" />
     <field name="utilidad" />
     <field name="total" />
